components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/activemq-deployment.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: activemq
  namespace: ${namespace}
  labels:
    app: activemq
    tier: prod
    gateway: ${gatewayLabel}
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: activemq
        tier: prod
        gateway: ${gatewayLabel}
    spec:
      containers:
      - image: docker.wso2.com/activemq 
        name: activemq
        imagePullPolicy: Never
