components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/activemq-service.yaml
# Copyright (c) 2017, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: v1
kind: Service
metadata:
  name: activemq
  namespace: ${namespace}
  labels:
    app: activemq
    tier: prod
    gateway: ${gatewayLabel}
spec:
  type: ClusterIP
  ports:
    # ports that this service should serve on
    -
      name: 'tcp'
      protocol: TCP
      port: 61616
      targetPort: 61616
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: activemq
    tier: prod
    gateway: ${gatewayLabel} # Since we need to stop the service when the gateway stops
