components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/container_based_service_withLB.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${serviceName}
  namespace: ${namespace}
  labels:
    gateway: ${gatewayLabel}  # should have the auto-generated label as the value
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    # ports that this service should serve on
    -
      name: 'pass-through-http'
      port: 9090
      targetPort: 9090
      nodePort: 32001
    -
      name: 'pass-through-https'
      port: 9092
      targetPort: 9092
      nodePort: 32002
  status:
    loadBalancer:
      ingress:
        - ip: ${loadBalancerIP}
  # label keys and values that must match in order to receive traffic for this service
  selector:
    gateway: ${gatewayLabel}
