components/apimgt/org.wso2.carbon.apimgt.core/src/test/resources/resources/template/gateway_container_templates/container_ingress_template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${ingressName}
spec:
  rules:
  - host: ${gatewayHostName} #Can use the service name itself here
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 9090
    # check how https is working
    https:
          paths:
          - backend:
              serviceName: website
              servicePort: 9092
